test_regress/t/t_constraint_assoc_arr_bad.out
%Warning-CONSTRAINTIGN: t/t_constraint_assoc_arr_bad.v:11:28: Unsupported: Constrained randomization of associative array keys of 144bits, limit is 128 bits
   11 |   constraint c {string_arr["a_very_long_string"] == 65;}
      |                            ^~~~~~~~~~~~~~~~~~~~
                        ... For warning description see https://verilator.org/warn/CONSTRAINTIGN?v=latest
                        ... Use "/* verilator lint_off CONSTRAINTIGN */" and lint_on around source to disable this message.
%Error: t/t_constraint_assoc_arr_bad.v:28:23: Illegal non-integral expression or subexpression in random constraint. (IEEE 1800-2023 18.3)
   28 |   constraint c1 {data[cl] > 0;}   
      |                       ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_constraint_assoc_arr_bad.v:43:28: Illegal non-integral expression or subexpression in random constraint. (IEEE 1800-2023 18.3)
   43 |     foreach (data[i]) data[i] < 100;
      |                            ^
%Error: t/t_constraint_assoc_arr_bad.v:58:41: Illegal non-integral expression or subexpression in random constraint. (IEEE 1800-2023 18.3)
   58 |   constraint c3 {foreach (data[i]) data[i] > 0;}
      |                                         ^
%Error: Exiting due to
